# declib

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: binsync-compat-tests.yml  dec-tests.yml  release.yml
declib/: __init__.py  __main__.py  configuration.py  logger.py  plugin_installer.py
declib/api/: artifact_dict.py  artifact_lifter.py  decompiler_client.py  decompiler_interface.py  decompiler_server.py  prototype.py  server_registry.py  type_definition_parser.py  utils.py
declib/artifacts/: func.py
declib/cli/: __init__.py  decompiler_cli.py
declib/decompiler_stubs/: ida_declib.py
declib/decompiler_stubs/angr_declib/: __init__.py  plugin.toml
declib/decompiler_stubs/binja_declib/: README.md  __init__.py  plugin.json  requirements.txt
declib/decompilers/: __init__.py
declib/decompilers/angr/: artifact_lifter.py  compat.py  interface.py
declib/decompilers/binja/: artifact_lifter.py  hooks.py  interface.py
declib/decompilers/ghidra/: artifact_lifter.py  hooks.py  interface.py
declib/decompilers/ghidra/compat/: headless.py
declib/decompilers/ida/: artifact_lifter.py  compat.py  hooks.py  ida_ui.py  interface.py
declib/decompilers/jadx/: __init__.py  interface.py  worker_client.py
declib/decompilers/jadx/worker/: __init__.py  build.gradle.kts  settings.gradle.kts
declib/decompilers/jadx/worker/src/main/java/declib/jadxworker/: JadxService.java  Main.java
declib/decompilers/jadx/worker/src/main/resources/: logback.xml
declib/decompilers/jadx/worker/src/test/java/declib/jadxworker/: JadxServiceTest.java
declib/skills/: __init__.py
declib/skills/decompiler/: SKILL.md
declib/ui/: __init__.py  qt_objects.py  utils.py
docs/: decompiler_cli.md  jadx.md
examples/: README.md  decompiler_client_example.py  retype_functions.py  struct_and_variable_use.py  template_plugin_entry.py
examples/change_watcher_plugin/: README.md  setup.cfg
examples/change_watcher_plugin/dl_change_watcher/: __init__.py  __main__.py  dl_change_watcher_plugin.py  plugin.toml
libbs/: __init__.py
libbs/api/: type_definition_parser.py
libbs/cli/: decompiler_cli.py
libbs/decompilers/ghidra/: interface.py
libbs/decompilers/ida/: compat.py
libbs/skills/decompiler/: SKILL.md
tests/: test_artifacts.py  test_cli.py  test_client_server.py  test_decompiler_cli.py  test_decompilers.py  test_ghidra_comments.py  test_ghidra_server_dispatch.py  test_jadx.py
