[build-system]
requires = ["setuptools>=61.2"]
build-backend = "setuptools.build_meta"

[project]
name = "declib"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.12",
]
license = "BSD-2-Clause"
license-files = ["LICENSE"]
description = "Your Only Decompiler API Lib - A generic API to script in and out of decompilers"
urls = {Homepage = "https://github.com/binsync/declib"}
requires-python = ">= 3.10"
dependencies = [
    "toml",
    "ply",
    "pycparser~=3.0",
    "setuptools",
    "prompt_toolkit",
    "tqdm",
    "psutil",
    "pyghidra",
    "platformdirs",
    "filelock",
    "networkx"
]
dynamic = ["version"]

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.optional-dependencies]
test = [
    "pytest",
    "angr",
    "requests",
    "ipdb"
]
ghidra = [
    "PySide6-Essentials>=6.4.2,!=6.7.0"
]

[project.scripts]
declib = "declib.__main__:main"
decompiler = "declib.cli:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
"declib.skills" = ["**/SKILL.md", "**/*.md"]
"declib.decompilers.jadx.worker" = [
    "build.gradle.kts",
    "settings.gradle.kts",
    "bridge/declib-jadx-worker.jar",
    "src/main/java/**/*.java",
    "src/main/resources/**/*",
]

[tool.setuptools.packages]
find = {namespaces = false}

[tool.setuptools.dynamic]
version = {attr = "declib.__version__"}
